<resources>
    <string name="app_name">FifthPrototype</string>
    <string name="action_settings">Settings</string>
    <string name="email_log">Email</string>
    <string name="email_pass">Password</string>
    <string name="email_cpass">Confirm Password</string>
    <string name="log">Log In</string>
    <string name="sign">Sign Up</string>
    <string name="later">I will do it later</string>
    <string name="single">Single Occupancy</string>
    <string name="sharing">Sharing</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_maps">Map</string>
    <string name="register">Register</string>
    <string name="title_activity_main22">Register</string>
    <string name="title_activity_main23">Search</string>
    <string name="title_activity_main24">Main24Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_section1">ha</string>
    <string name="title_section2">ha</string>
    <string name="title_section3">ha</string>
    <string name="title_activity_saved_search">saved_search</string>
    <string name="intro">Welcome to Fifth Prototype."\n"Sign in or register to save your favourite homes.</string>
    <string name="action_search">Search</string>
    <string name="action_home">Home</string>
    <string name="action_fav">Favourite</string>
    <string name="title_activity_single">single</string>
    <string name="title_activity_sharing">sharing</string>
    <string name="title_activity_sharing_info">sharing_info</string>
    <string name="back1">sun facing"\n"spacious"\n"green belt"\n"termite proof"\n"hard wood floor"\n"Full Bath</string>
    <string name="back2">sun facing"\n"spacious"\n"green belt"\n"termite proof"\n"hard wood floor"\n"Full Bath</string>
    <string name="title_activity_single_info">single_info</string>

</resources>
