<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.fifthprototype.MainActivity"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="150"
        app:showAsAction="always"
        android:icon="@drawable/ic_search_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <item android:id="@+id/action_home"
        android:title="@string/action_home"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_home_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <item android:id="@+id/action_fav"
        android:title="@string/action_fav"
        android:orderInCategory="200"
        app:showAsAction="always"
        android:icon="@drawable/ic_favorite_outline_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</menu>
